fixed rating alignment issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -333,7 +333,7 @@ li {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     padding-top: 100px;
     padding-bottom: 100px;
     border-radius: 16px;
